Incluí borrado en grid de reembolsos y quite columnas de listado de rembolsos

--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -104,7 +104,7 @@
                                 </a>
                             </td>
                             <td>
-                                <a class="btn btn-lg">
+                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Delete" asp-route-UUID="@comprobante.UUID">
                                     <i class="fas fa-eraser"></i>
                                 </a>
                             </td>
