Include functionality for add new rembolso without solicitud

--- a/TravelExpenses/Views/Rembolso/Lista.cshtml
+++ b/TravelExpenses/Views/Rembolso/Lista.cshtml
@@ -6,12 +6,12 @@
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Rembolsos</h1>
+<h1>Reembolsos</h1>
 
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
-       
+        <a asp-controller="Rembolso" asp-action="Edit" class="btn btn-primary">Solicitar reembolso</a>
         <div class="card-body">
             <div class="table-responsive">
                 <table id="data-table-basic" class="table table-striped">
