--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -5,15 +5,18 @@
 
 <div class="dropzone-area">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        @if (Model.solicitud != null)
+        { 
+            <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <label class="control-label">Folio Solicitud: @Model.solicitud.Folio</label>
-                    <label class="control-label">Departamento: @Model.solicitud.Departamento</label>
-                    <label class="control-label">Importe Solicitado: </label> @String.Format("{0:C}", Model.solicitud.ImporteSolicitado)
-                </div>                
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label class="control-label">Folio Solicitud: @Model.solicitud.Folio</label>
+                        <label class="control-label">Departamento: @Model.solicitud.Departamento</label>
+                        <label class="control-label">Importe Solicitado: </label> @String.Format("{0:C}", Model.solicitud.ImporteSolicitado)
+                    </div>                
+                </div>
             </div>
-        </div>
+        }
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="dropdone-nk mg-t-30">
@@ -85,30 +88,32 @@
                         </tr>
                     </thead>
                     <tbody id="tblComprobantes">
-                        @foreach (var comprobante in Model.Comprobantes)
-                        {
-
-                        <tr>
-                            <td>@comprobante.Folio</td>
-                            <td>@comprobante.UUID</td>
-                            <td>@comprobante.Fecha</td>
-                            <td>@comprobante.RFC</td>
-                            <td>@comprobante.NombreProveedor</td>
-                            <td>@comprobante.Moneda</td>
-                            <td>@comprobante.SubTotal</td>
-                            <td>@comprobante.Impuestos</td>
-                            <td>@comprobante.Total</td>
-                            <td>
-                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Details" asp-route-UUID="@comprobante.UUID">
-                                    <i class="fas fa-edit"></i>
-                                </a>
-                            </td>
-                            <td>
-                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Delete" asp-route-UUID="@comprobante.UUID">
-                                    <i class="fas fa-eraser"></i>
-                                </a>
-                            </td>
-                        </tr>
+                        @if (Model.Comprobantes != null)
+                        { 
+                            foreach (var comprobante in Model.Comprobantes)
+                            {
+                                <tr>
+                                <td>@comprobante.Folio</td>
+                                <td>@comprobante.UUID</td>
+                                <td>@comprobante.Fecha</td>
+                                <td>@comprobante.RFC</td>
+                                <td>@comprobante.NombreProveedor</td>
+                                <td>@comprobante.Moneda</td>
+                                <td>@comprobante.SubTotal</td>
+                                <td>@comprobante.Impuestos</td>
+                                <td>@comprobante.Total</td>
+                                <td>
+                                    <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Details" asp-route-UUID="@comprobante.UUID">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Delete" asp-route-UUID="@comprobante.UUID">
+                                        <i class="fas fa-eraser"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            }
                         }
                     </tbody>
                 </table>
