--- a/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
+++ b/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
@@ -3,28 +3,10 @@
 @{
 }
 
-<div >
+<div>
     <form asp-controller="Roles" asp-action="UpdateUserRole" method="post">
         <h2>Agregar Roles a usuario</h2>
-        @*<ul>
-            @foreach (var user in Model.Users)
-            {
-                <li>
-                    <input type="radio" asp-for="UserEmail" value="@user.Email" />
-                    @user.Email
-                </li>
-                <li>
-                    <ul>
-                        @foreach (var role in user.Roles)
-                        {
-                            <li>
-                                @role.Name
-                            </li>
-                        }
-                    </ul>
-                </li>
-            }
-        </ul>*@
+
 
         <select asp-for="UserEmail" class="form-control" onchange="SelectItem()">
             <option>Selecciona un usuario</option>
@@ -41,7 +23,8 @@
         </select>
 
         <input type="submit" class="btn btn-primary" value="Eliminar Usuario" onclick="document.getElementById('DeleteUser').value = 'true'" />
-
+        <input type="submit" class="btn btn-primary" value="Consultar Permisos" onclick="document.getElementById('Consultar').value = 'true'" />
+        @*<input type="button" class="btn btn-primary" value="Consultar" onclick="location.href='@Url.Action("ObternerPermisos", "Roles", new {email=Model.Users})'" />*@
         <h4>Roles a agregar</h4>
         <ul>
             @foreach (var role in Model.Roles)
@@ -55,9 +38,11 @@
         <input type="submit" class="btn btn-primary" value="Agregar Role" />
         <input type="hidden" class="btn btn-primary" asp-for="Delete" value="false" id="Eliminar" />
         <input type="hidden" class="btn btn-primary" asp-for="DeleteUser" value="false" id="DeleteUser" />
+        <input type="hidden" class="btn btn-primary" asp-for="Consultar" value="false" id="Consultar" />
         <input type="submit" class="btn btn-primary" value="Eliminar Role" onclick="document.getElementById('delete').value = 'true'" />
 
     </form>
+   
 </div>
 
 <script>
