--- a/TravelExpenses/Views/Roles/_CreateRole.cshtml
+++ b/TravelExpenses/Views/Roles/_CreateRole.cshtml
@@ -5,7 +5,7 @@
 <div>
     <form asp-controller="Roles" asp-action="CreateRole" method="post">
         <label>Crear nuevo Role</label>
-        <input asp-for="Name" />
+        <input asp-for="Name" class="form-control" />
         <br />
         <input class="btn btn-primary"  type="submit" value="Crear Role" />
     </form>
