Solicitudes carga inicial

--- a/TravelExpenses/Views/Aprobador/AprobarSolicitud.cshtml
+++ b/TravelExpenses/Views/Aprobador/AprobarSolicitud.cshtml
@@ -52,7 +52,7 @@
                                 <td>@item.Estatus</td>
                                 <td>2</td>
                                 <td>
-                                    <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Edit" asp-route-folio="@item.Folio">
+                                    <a class="btn btn-lg" asp-controller="Aprobador" asp-action="Aprobar" asp-route-folio="@item.Folio">
                                         <i class="fas fa-edit"></i>
                                     </a>
                                 </td>
