--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -51,7 +51,7 @@
                 <br />
             </div>
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped" id="data-table-basic">
                     <thead>
                         <tr>
                             <th>Folio</th>
@@ -82,15 +82,27 @@
                                     <i class="fas fa-edit"></i>
                                 </a>
                             </td>
-                            <td>
-                                <a class="btn btn-lg" asp-controller="Home" asp-action="EliminarSolicitud" asp-route-Folio="@item.Folio" id="accion1">
-                                    <i class="fas fa-eraser"></i>
-                                </a>
-                            </td>
-                            @if (@item.Estatus == "Incompleta")
+                            @if (@item.Estatus == "Incompleta" || @item.Estatus == "Capturada")
                             {
                                 <td>
-                                    <a class="btn btn-lg" >
+                                    <a class="btn btn-lg" asp-controller="Home" asp-action="EliminarSolicitud" asp-route-Folio="@item.Folio" id="accion1">
+                                        <i class="fas fa-eraser"></i>
+                                    </a>
+                                </td>
+                            }
+                            else
+                            {
+                                <td>
+                                    <a class="btn btn-lg">
+                                        <i class="fas fa-ban "></i>
+                                    </a>
+                                </td>
+                            }
+                            @if (@item.Estatus == "Incompleta"|| @item.Estatus == "PorAutorizar" ||
+                              @item.Estatus == "PorComprobar" || @item.Estatus == "PorLiberar"|| @item.Estatus == "Rechazada"||@item.Estatus=="Cancelada")
+                            {
+                                <td>
+                                    <a class="btn btn-lg">
                                         <i class="fas fa-ban "></i>
                                     </a>
                                 </td>
@@ -103,7 +115,7 @@
                                     </a>
                                 </td>
                             }
-                            </tr>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -138,18 +150,36 @@
                 }
                 else {
                     $.each(response, function (index, item) {
-                        if (item.estatus == "Incompleta") {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" +  item.importeSolicitado+" "+item.claveMoneda+
-                                "</td><td>" + "$" +  item.importeComprobado + " " +item.claveMoneda+ "</td><td>" + item.estatus +
+                        if (item.estatus == "Incompleta" ) {
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
+                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" +
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
                         }
+                        else if (item.estatus == "PorAutorizar" || item.estatus == "PorComprobar" ||
+                            item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada")
+                        {
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
+                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
+                                "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
+                                "<a class='btn btn-lg' > <i class='fas fa-ban'></i></a >" +
+                                "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
+                        }
+                        else if (item.estatus == "Capturada") {
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
+                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
+                                "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
+                                "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" + "</td><td>" +
+                                "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
+                        }
+                        
+
                         else {
                             row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" +"$"+ item.importeSolicitado + " " +item.claveMoneda+
                                 "</td><td>" + "$" + item.importeComprobado + " " +item.claveMoneda+ "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
-                                "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" + "</td><td>" +
+                                "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
                         }
                     });
