--- a/TravelExpenses/Views/Politica/Edit.cshtml
+++ b/TravelExpenses/Views/Politica/Edit.cshtml
@@ -18,19 +18,6 @@ else { <h1>Nueva Politica</h1> }
                         <span asp-validation-for=@Model.Politica.Nombre class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">Gasto</label>
-                        <select asp-for="Politica.IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
-                                asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
-                            <option value="">--Seleccione un Gasto</option>
-                        </select>
-                        <span class="text-danger" asp-validation-for="Gastos"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Importe Permitido</label>
-                        <input asp-for=@Model.Politica.ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
-                        <span asp-validation-for=@Model.Politica.ImportePermitido class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
                         <label class="control-label">Num Solicitudes</label>
                         <input asp-for=@Model.Politica.NumSolicitudes class="form-control" placeholder="Número de Solicitudes Pendientes Comprobar" />
                         <span asp-validation-for=@Model.Politica.NumSolicitudes class="text-danger"></span>
@@ -50,9 +37,71 @@ else { <h1>Nueva Politica</h1> }
                         <input asp-for=@Model.Politica.Activo class="custom-checkbox" />
                         <span asp-validation-for=@Model.Politica.Activo class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Guardar" class="btn btn-primary" />
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
+                            <input type="submit" value="Guardar" class="btn btn-primary" />
+                        </div>
                     </div>
+
+                    <div class="card-body">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
+                                    <label class="control-label">Gasto</label>
+                                    <select asp-for="Politica.IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                            asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
+                                        <option value="">--Seleccione un Gasto</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
+                                    <label class="control-label">Importe Permitido</label>
+                                    <input asp-for=Politica.ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
+                                    <input type="submit" value="Agregar Concepto" class="btn btn-primary" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            Gasto Permitido
+                                        </th>
+                                        <th>
+                                            Importe Máximo
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tblGastos">
+                                    @if (Model.Gastos != null && Model.Politica.Detalle != null && @Model.Gastos.Count() > 0 && Model.Politica.Detalle.Count() > 0)
+                                    {
+                                        for (int i = 0; i < Model.Politica.Detalle.Count(); i++)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <input asp-for=Politica.Detalle[i].IdGasto class="form-control" placeholder="Gasto" />
+                                                    <span class="text-danger" asp-validation-for="Gastos"></span>
+                                                </td>
+                                                <td>
+                                                    <input asp-for=Politica.Detalle[i].ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
+                                                    <span asp-validation-for=Politica.Detalle[i].ImportePermitido class="text-danger"></span>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+
                 </form>
             </div>
         </div>
