--- a/TravelExpenses/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -27,7 +27,7 @@
                 else
                 {
                     <input asp-for="Input.Email" class="form-control" />
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Envio de verificacion por correo</button>
                 }
                 <span asp-validation-for="Input.Email" class="text-danger">Correo</span>
             </div>
